fixed purpsoe to purpose

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Chicago." name="description" />
 		</div>
 		<div class="project loaded" id="kin">
 			<h1>
-				Purpsoe</h1>
+				Purpose</h1>
 			<p>
 				What would you like to use the product for?</p>
 			<p>
